// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`issue-4926.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
class Foo {
    /** Does this key match a given MinimalKey extending object? */
    match(keyevent) {
        // 'in' doesn't include prototypes, so it's safe for this object.
        for (let attr in this) {
            if (this[attr] !== keyevent[attr]) return false
        }
        return true
    }
}

=====================================output=====================================
class Foo {
    /** Does this key match a given MinimalKey extending object? */
    match(keyevent) {
      // 'in' doesn't include prototypes, so it's safe for this object.
      for (let attr in this) {
        if (this[attr] !== keyevent[attr]) return false;
      }
      return true;
    }
}

================================================================================
`;

exports[`issue-7148.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export default class Test {
  private obj = { isTest: true }
}

=====================================output=====================================
export default class Test {
  private obj = { isTest: true };
}

================================================================================
`;
